# ilqgames

./: .gitignore  CMakeLists.txt
include/ilqgames/simulator/: pyproblem.h
include/ilqgames/utils/: solver_log.h
sims/: CMakeLists.txt
sims/xplane/: main.cpp
simulator/: CMakeLists.txt  controller.py  example.cpp  test.py
src/: pyproblem.cpp  racing_lane_center.cpp  three_player_racing_example.cpp
xcode/ilqgames.xcworkspace/xcuserdata/johnathanchiu.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/ilqgames/ilqgames.xcodeproj/: project.pbxproj
xcode/ilqgames/ilqgames.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/ilqgames/ilqgames.xcodeproj/project.xcworkspace/xcuserdata/johnathanchiu.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/ilqgames/ilqgames.xcodeproj/xcuserdata/johnathanchiu.xcuserdatad/xcschemes/: xcschememanagement.plist
